--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -32,6 +32,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="oRAInterface, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLLs\oRAInterface.dll</HintPath>
+    </Reference>
+    <Reference Include="osu!BMAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLLs\osu!BMAPI.dll</HintPath>
+    </Reference>
+    <Reference Include="osu!ReplayAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>DLLs\osu!ReplayAPI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -51,20 +63,6 @@
     <Compile Include="BarGraph.Designer.cs">
       <DependentUpon>BarGraph.cs</DependentUpon>
     </Compile>
-    <Compile Include="BMAPI\BackgroundInfo.cs" />
-    <Compile Include="BMAPI\BaseCircle.cs" />
-    <Compile Include="BMAPI\BaseEvent.cs" />
-    <Compile Include="BMAPI\BeatmapInfo.cs" />
-    <Compile Include="BMAPI\BMAPI.cs" />
-    <Compile Include="BMAPI\BreakInfo.cs" />
-    <Compile Include="BMAPI\ColourInfo.cs" />
-    <Compile Include="BMAPI\ComboInfo.cs" />
-    <Compile Include="BMAPI\Enums.cs" />
-    <Compile Include="BMAPI\PointInfo.cs" />
-    <Compile Include="BMAPI\SliderInfo.cs" />
-    <Compile Include="BMAPI\SpinnerInfo.cs" />
-    <Compile Include="BMAPI\TimingPointInfo.cs" />
-    <Compile Include="BMAPI\VideoInfo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,27 +81,8 @@
     <Compile Include="LocaleSelectForm.Designer.cs">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LZMA\CommandLineParser.cs" />
-    <Compile Include="LZMA\CRC.cs" />
-    <Compile Include="LZMA\ICoder.cs" />
-    <Compile Include="LZMA\IMatchFinder.cs" />
-    <Compile Include="LZMA\InBuffer.cs" />
-    <Compile Include="LZMA\LzBinTree.cs" />
-    <Compile Include="LZMA\LzInWindow.cs" />
-    <Compile Include="LZMA\LzmaBase.cs" />
-    <Compile Include="LZMA\LzmaDecoder.cs" />
-    <Compile Include="LZMA\LzmaEncoder.cs" />
-    <Compile Include="LZMA\LzOutWindow.cs" />
-    <Compile Include="LZMA\OutBuffer.cs" />
-    <Compile Include="LZMA\RangeCoder.cs" />
-    <Compile Include="LZMA\RangeCoderBit.cs" />
-    <Compile Include="LZMA\RangeCoderBitTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RAPI\Enums.cs" />
-    <Compile Include="RAPI\LifeInfo.cs" />
-    <Compile Include="RAPI\Replay.cs" />
-    <Compile Include="RAPI\ReplayInfo.cs" />
     <Compile Include="sFuncs.cs" />
     <EmbeddedResource Include="BarGraph.resx">
       <DependentUpon>BarGraph.cs</DependentUpon>
@@ -144,6 +123,7 @@
     <None Include="Resources\enUSFlag.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Debug\Plugins\CursorTracer.dll" />
     <Content Include="ToDo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
