(*) Finished locale generator.
(*) Made necessary main form items global to plugins.
(*) Improved plugin usage.
(*) Improved plugin loading.
(*) Added plugin settings form.

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ PluginTemplate/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB2
 PluginTemplate/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 PluginTemplate/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 o!RA/obj/Debug/o_RA.oRAMainForm.resources
+o!RA Locale Generator/bin/Debug/o!RA Locale Generator.vshost.exe.manifest
+o!RA Locale Generator/GlobalVars.cs
+o!RA/obj/Debug/o_RA.PluginSettingsForm.resources
