--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -81,9 +81,15 @@
     <Compile Include="LocaleSelectForm.Designer.cs">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PluginSettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PluginSettingsForm.Designer.cs">
+      <DependentUpon>PluginSettingsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sFuncs.cs" />
+    <Compile Include="oRAFuncs.cs" />
     <EmbeddedResource Include="BarGraph.resx">
       <DependentUpon>BarGraph.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LocaleSelectForm.resx">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PluginSettingsForm.resx">
+      <DependentUpon>PluginSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
