(*) Fix Beatmap API directory (had it set up with a previous git repository...)

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,16 @@ o!RA/obj/Debug/o_RA.oRAMainForm.resources
 o!RA Locale Generator/bin/Debug/o!RA Locale Generator.vshost.exe.manifest
 o!RA Locale Generator/GlobalVars.cs
 o!RA/obj/Debug/o_RA.PluginSettingsForm.resources
+osu!BMAPIC#/osu!BMAPI/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+osu!BMAPIC#/osu!BMAPI/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+osu!BMAPIC#/osu!BMAPI/obj/Debug/osu!BMAPI.csproj.FileListAbsolute.txt
+osu!BMAPIC#/osu!BMAPI/obj/Debug/osu!BMAPI.csprojResolveAssemblyReference.cache
+osu!BMAPIC#/osu!BMAPI/obj/Debug/osu!BMAPI.dll
+osu!BMAPIC#/osu!BMAPI/obj/Debug/osu!BMAPI.pdb
+osu!BMAPIC#/osu!BMAPI/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+osu!BMAPIC#/osu!BMAPI/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+osu!BMAPIC#/osu!BMAPI/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+osu!BMAPIC#/osu!BMAPI/bin/Debug/osu!BMAPI.dll
+osu!BMAPIC#/osu!BMAPI/bin/Debug/osu!BMAPI.pdb
+osu!BMAPIC#/osu!BMAPI/bin/Debug/osu!BMAPI.vshost.exe
+osu!BMAPIC#/osu!BMAPI/bin/Debug/osu!BMAPI.vshost.exe.manifest
