--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -57,12 +57,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BarGraph.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BarGraph.Designer.cs">
-      <DependentUpon>BarGraph.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="oRAColours.cs" />
+    <Compile Include="oRAFonts.cs" />
     <Compile Include="oRAMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +83,12 @@
     <Compile Include="LocaleSelectForm.Designer.cs">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="oRATabControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="oRATabControl.Designer.cs">
+      <DependentUpon>oRATabControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="PluginSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,8 +98,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="oRAFuncs.cs" />
-    <EmbeddedResource Include="BarGraph.resx">
-      <DependentUpon>BarGraph.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="oRAMainForm.resx">
       <DependentUpon>oRAMainForm.cs</DependentUpon>
@@ -101,6 +109,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LocaleSelectForm.resx">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="oRATabControl.resx">
+      <DependentUpon>oRATabControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PluginSettingsForm.resx">
       <DependentUpon>PluginSettingsForm.cs</DependentUpon>
@@ -124,9 +135,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\enUSFlag.png" />
