(*) Added custom new style progressbar.
(*) Added 1px tab spacing for oRATabControl
(*) Remove various useless panels of main form and improve layout.
(*) Fixed background colours of TWChart and SRPMChart.

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ osu!BMAPIC#/osu!BMAPI/bin/Debug/osu!BMAPI.dll
 osu!BMAPIC#/osu!BMAPI/bin/Debug/osu!BMAPI.pdb
 osu!BMAPIC#/osu!BMAPI/bin/Debug/osu!BMAPI.vshost.exe
 osu!BMAPIC#/osu!BMAPI/bin/Debug/osu!BMAPI.vshost.exe.manifest
+o!RA/obj/Debug/o!RA (1).pdb
