--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -57,54 +57,63 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="oRAColours.cs" />
-    <Compile Include="oRAFonts.cs" />
-    <Compile Include="oRAMainForm.cs">
+    <Compile Include="Globals\oRAColours.cs" />
+    <Compile Include="Globals\oRAFonts.cs" />
+    <Compile Include="oRAForms\oRAMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="oRAMainForm.Designer.cs">
+    <Compile Include="oRAForms\oRAMainForm.Designer.cs">
       <DependentUpon>oRAMainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LanguageBox.cs">
+    <Compile Include="oRAControls\oRALanguageBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="LanguageBox.Designer.cs">
-      <DependentUpon>LanguageBox.cs</DependentUpon>
+    <Compile Include="oRAControls\oRALanguageBox.Designer.cs">
+      <DependentUpon>oRALanguageBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="LocaleSelectForm.cs">
+    <Compile Include="oRAForms\LocaleSelectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LocaleSelectForm.Designer.cs">
+    <Compile Include="oRAForms\LocaleSelectForm.Designer.cs">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="oRATabControl.cs">
+    <Compile Include="oRAControls\oRAProgressBar.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="oRATabControl.Designer.cs">
+    <Compile Include="oRAControls\oRAProgressBar.Designer.cs">
+      <DependentUpon>oRAProgressBar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="oRAControls\oRATabControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="oRAControls\oRATabControl.Designer.cs">
       <DependentUpon>oRATabControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="PluginSettingsForm.cs">
+    <Compile Include="oRAForms\PluginSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PluginSettingsForm.Designer.cs">
+    <Compile Include="oRAForms\PluginSettingsForm.Designer.cs">
       <DependentUpon>PluginSettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="oRAFuncs.cs" />
-    <EmbeddedResource Include="oRAMainForm.resx">
+    <Compile Include="Globals\oRAFuncs.cs" />
+    <EmbeddedResource Include="oRAControls\oRAProgressBar.resx">
+      <DependentUpon>oRAProgressBar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="oRAForms\oRAMainForm.resx">
       <DependentUpon>oRAMainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LanguageBox.resx">
-      <DependentUpon>LanguageBox.cs</DependentUpon>
+    <EmbeddedResource Include="oRAControls\oRALanguageBox.resx">
+      <DependentUpon>oRALanguageBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocaleSelectForm.resx">
+    <EmbeddedResource Include="oRAForms\LocaleSelectForm.resx">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="oRATabControl.resx">
+    <EmbeddedResource Include="oRAControls\oRATabControl.resx">
       <DependentUpon>oRATabControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PluginSettingsForm.resx">
+    <EmbeddedResource Include="oRAForms\PluginSettingsForm.resx">
       <DependentUpon>PluginSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
