(*) Fixed listview flickering.
(*) Progress on converting listviews to new style.
(*) Localized column headers of list views.

--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -59,6 +59,9 @@
   <ItemGroup>
     <Compile Include="Globals\oRAColours.cs" />
     <Compile Include="Globals\oRAFonts.cs" />
+    <Compile Include="oRAControls\oRAListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="oRAForms\oRAMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
