--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -32,17 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="oRAInterface, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>DLLs\oRAInterface.dll</HintPath>
+    <Reference Include="oRAInterface">
+      <HintPath>..\DLLs\oRAInterface.dll</HintPath>
     </Reference>
-    <Reference Include="osu!BMAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>DLLs\osu!BMAPI.dll</HintPath>
+    <Reference Include="osu!BMAPI">
+      <HintPath>..\DLLs\osu!BMAPI.dll</HintPath>
     </Reference>
-    <Reference Include="osu!ReplayAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>DLLs\osu!ReplayAPI.dll</HintPath>
+    <Reference Include="osu!ReplayAPI">
+      <HintPath>..\DLLs\osu!ReplayAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
