--- a/osuReplayAPI/osuReplayAPI/osu!ReplayAPI.csproj
+++ b/osuReplayAPI/osuReplayAPI/osu!ReplayAPI.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\o!RA\DLLs\</OutputPath>
+    <OutputPath>..\..\DLLs\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
