(*) Unload plugins on form close.
(*) Force application thread to quit (destroy all non-backgrounded plugin threads)

--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,4 @@ oRASDK/obj/Debug/oRASDK.dll
 oRASDK/obj/Debug/oRASDK.pdb
 MapInfoPlugin/obj/Debug/MapInfoPlugin.Properties.Resources.resources
 MapInfoPlugin/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
+o!RA.v12.suo
