--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="oRAControls\oRALabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="oRAForms\oRAMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
