--- a/TWChartPlugin/TWChartPlugin.csproj
+++ b/TWChartPlugin/TWChartPlugin.csproj
@@ -81,6 +81,11 @@
     <None Include="Resources\TimingGraph_N.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>robocopy "$(TargetDir) " "$(SolutionDir)o!RA\bin\$(ConfigurationName)\Plugins\1_TWChart" "$(TargetFileName)"
+rem suppress successful robocopy exit statuses, only report genuine errors
+set/A errlev="%25ERRORLEVEL%25 &amp; 24"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
