--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Globals\oRAFuncs.cs" />
+    <Compile Include="SQLCEtools.cs" />
     <EmbeddedResource Include="oRAControls\oRAProgressBar.resx">
       <DependentUpon>oRAProgressBar.cs</DependentUpon>
     </EmbeddedResource>
