--- a/SpinnerRPMPlugin/SpinnerRPMPlugin.csproj
+++ b/SpinnerRPMPlugin/SpinnerRPMPlugin.csproj
@@ -29,6 +29,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="oRAInterface">
       <HintPath>..\DLLs\oRAInterface.dll</HintPath>
