--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -61,7 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tables\Beatmap.cs" />
     <Compile Include="DBHelper.cs" />
+    <Compile Include="AccessPoint.cs" />
     <Compile Include="oRAControls\oRALabel.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -104,7 +106,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Globals\oRAFuncs.cs" />
-    <Compile Include="SQLCEtools.cs" />
     <EmbeddedResource Include="oRAControls\oRAProgressBar.resx">
       <DependentUpon>oRAProgressBar.cs</DependentUpon>
     </EmbeddedResource>
