--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -107,7 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Globals\oRAFuncs.cs" />
     <Compile Include="Tables\Replay.cs" />
-    <Compile Include="Tables\ReplayFrame.cs" />
+    <Compile Include="Tables\ClickFrame.cs" />
     <EmbeddedResource Include="oRAControls\oRAProgressBar.resx">
       <DependentUpon>oRAProgressBar.cs</DependentUpon>
     </EmbeddedResource>
