--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -106,6 +106,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Globals\oRAFuncs.cs" />
+    <Compile Include="Tables\BeatmapTag.cs" />
+    <Compile Include="Tables\Beatmap_BeatmapTag.cs" />
     <Compile Include="Tables\Replay.cs" />
     <Compile Include="Tables\ClickFrame.cs" />
     <EmbeddedResource Include="oRAControls\oRAProgressBar.resx">
