--- a/Database Test/Database Test.csproj
+++ b/Database Test/Database Test.csproj
@@ -50,8 +50,9 @@
     <Reference Include="ErikEJ.SqlCe40">
       <HintPath>.\ErikEJ.SqlCe40.dll</HintPath>
     </Reference>
-    <Reference Include="osu!ReplayAPI">
-      <HintPath>.\osu!ReplayAPI.dll</HintPath>
+    <Reference Include="osu!ReplayAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DLLs\osu!ReplayAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
