(*) Use correct logic for DB updating (not fully implemented yet) (*) Use a parameter for string comparison (without doesn't work correctly) (*) Move the BulkCopy.dll to the main dll folder
Current performance on empty db:
22s for 325 replays and 300k clickframes

--- a/Database Test/Database Test.csproj
+++ b/Database Test/Database Test.csproj
@@ -47,8 +47,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ErikEJ.SqlCe40">
-      <HintPath>.\ErikEJ.SqlCe40.dll</HintPath>
+    <Reference Include="ErikEJ.SqlCe40, Version=2.1.6.4, Culture=neutral, PublicKeyToken=03b0b5a60fec3719, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\DLLs\ErikEJ.SqlCe40.dll</HintPath>
     </Reference>
     <Reference Include="osu!ReplayAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
