--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -57,64 +57,66 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="oRAControls\oRALabel.cs">
+    <Compile Include="Controls\oRALabel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="oRAForms\oRAMainForm.cs">
+    <Compile Include="Forms\oRAMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="oRAForms\oRAMainForm.Designer.cs">
+    <Compile Include="Forms\oRAMainForm.Designer.cs">
       <DependentUpon>oRAMainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="oRAControls\oRALanguageBox.cs">
+    <Compile Include="Controls\oRALanguageBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="oRAControls\oRALanguageBox.Designer.cs">
+    <Compile Include="Controls\oRALanguageBox.Designer.cs">
       <DependentUpon>oRALanguageBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="oRAForms\LocaleSelectForm.cs">
+    <Compile Include="Forms\LocaleSelectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="oRAForms\LocaleSelectForm.Designer.cs">
+    <Compile Include="Forms\LocaleSelectForm.Designer.cs">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="oRAControls\oRAProgressBar.cs">
+    <Compile Include="Controls\oRAProgressBar.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="oRAControls\oRAProgressBar.Designer.cs">
+    <Compile Include="Controls\oRAProgressBar.Designer.cs">
       <DependentUpon>oRAProgressBar.cs</DependentUpon>
     </Compile>
-    <Compile Include="oRAControls\oRATabControl.cs">
+    <Compile Include="Controls\oRATabControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="oRAControls\oRATabControl.Designer.cs">
+    <Compile Include="Controls\oRATabControl.Designer.cs">
       <DependentUpon>oRATabControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="oRAForms\PluginSettingsForm.cs">
+    <Compile Include="Forms\PluginSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="oRAForms\PluginSettingsForm.Designer.cs">
+    <Compile Include="Forms\PluginSettingsForm.Designer.cs">
       <DependentUpon>PluginSettingsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GlobalClasses\oRAtpDifficulty.cs" />
+    <Compile Include="GlobalClasses\tpHitObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Globals\oRAFuncs.cs" />
-    <EmbeddedResource Include="oRAControls\oRAProgressBar.resx">
+    <Compile Include="GlobalClasses\oRAFuncs.cs" />
+    <EmbeddedResource Include="Controls\oRAProgressBar.resx">
       <DependentUpon>oRAProgressBar.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="oRAForms\oRAMainForm.resx">
+    <EmbeddedResource Include="Forms\oRAMainForm.resx">
       <DependentUpon>oRAMainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="oRAControls\oRALanguageBox.resx">
+    <EmbeddedResource Include="Controls\oRALanguageBox.resx">
       <DependentUpon>oRALanguageBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="oRAForms\LocaleSelectForm.resx">
+    <EmbeddedResource Include="Forms\LocaleSelectForm.resx">
       <DependentUpon>LocaleSelectForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="oRAControls\oRATabControl.resx">
+    <EmbeddedResource Include="Controls\oRATabControl.resx">
       <DependentUpon>oRATabControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="oRAForms\PluginSettingsForm.resx">
+    <EmbeddedResource Include="Forms\PluginSettingsForm.resx">
       <DependentUpon>PluginSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -142,12 +144,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\Plugins\CursorTracer.dll" />
-    <None Include="Resources\SpinnerRPMGraph_N.png" />
-    <None Include="Resources\TimingGraph_H.png" />
-    <None Include="Resources\TimingGraph_N.png" />
     <None Include="Resources\Menu_H.png" />
     <None Include="Resources\Menu_N.png" />
-    <None Include="Resources\SpinnerRPMGraph_H.png" />
     <Content Include="ToDo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
