--- a/MapInfoPlugin/MapInfoPlugin.csproj
+++ b/MapInfoPlugin/MapInfoPlugin.csproj
@@ -66,12 +66,14 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="oRA.cs" />
+    <Compile Include="tpDifficulty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="tpHitObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
