--- a/ChartsPlugin/ChartsPlugin.csproj
+++ b/ChartsPlugin/ChartsPlugin.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CEA665BD-D5C0-4272-A572-37FAE8AB4588}</ProjectGuid>
+    <ProjectGuid>{632F8835-2AB0-488A-8EA4-EA47E2808E9A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SpinnerRPMPlugin</RootNamespace>
-    <AssemblyName>SpinnerRPMPlugin</AssemblyName>
+    <RootNamespace>ChartsPlugin</RootNamespace>
+    <AssemblyName>ChartsPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -54,11 +54,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs">
+    <Compile Include="Container.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="Container.Designer.cs">
+      <DependentUpon>Container.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SRPMChart.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SRPMChart.Designer.cs">
+      <DependentUpon>SRPMChart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TWChart.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TWChart.Designer.cs">
+      <DependentUpon>TWChart.cs</DependentUpon>
     </Compile>
     <Compile Include="oRA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -69,8 +81,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <EmbeddedResource Include="Container.resx">
+      <DependentUpon>Container.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SRPMChart.resx">
+      <DependentUpon>SRPMChart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TWChart.resx">
+      <DependentUpon>TWChart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -78,14 +96,20 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\SpinnerRPMGraph_N.png" />
+    <None Include="Resources\TimingGraph_H.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\SpinnerRPMGraph_H.png" />
+    <None Include="Resources\TimingGraph_N.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Graphs_H.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Graphs_N.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>robocopy "$(TargetDir) " "$(SolutionDir)o!RA\bin\$(ConfigurationName)\Plugins\2_SpinnerRPM" "$(TargetFileName)"
+    <PostBuildEvent>robocopy "$(TargetDir) " "$(SolutionDir)o!RA\bin\$(ConfigurationName)\Plugins\1_Charts" "$(TargetFileName)"
 rem suppress successful robocopy exit statuses, only report genuine errors
 set/A errlev="%25ERRORLEVEL%25 &amp; 24"</PostBuildEvent>
   </PropertyGroup>
