(*) Fix solution build dependencies.

--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -31,21 +31,29 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ErikEJ.SqlCe40">
       <HintPath>..\DLLs\ErikEJ.SqlCe40.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="oRAInterface, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLLs\oRAInterface.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="osu!BMAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLLs\osu!BMAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="osu!ReplayAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLLs\osu!ReplayAPI.dll</HintPath>
+      <Private>True</Private>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -157,7 +165,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y /D /E  "$(SolutionDir)DLLs\*.*" "$(SolutionDir)o!RA\bin\$(ConfigurationName)"</PostBuildEvent>
+    <PostBuildEvent>xcopy /Y /D /E /C "$(SolutionDir)DLLs\*.*" "$(SolutionDir)o!RA\bin\$(ConfigurationName)"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
