(*) Cleanup unused code from MapInfo.
(*) Move replays list TV to a class (should allow us to extend it easier).
(*) Forced bounds and changed style of replays list TV a bit.

--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -76,6 +76,9 @@
     <Compile Include="Controls\oRALabel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\oRAReplayList.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\oRAMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
