--- a/o!RAResources/oRAResources.csproj
+++ b/o!RAResources/oRAResources.csproj
@@ -63,6 +63,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\de.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Menu_H.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Menu_N.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
