--- a/InfosPlugin/InfosPlugin.csproj
+++ b/InfosPlugin/InfosPlugin.csproj
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="oRAInterface">
-      <HintPath>..\DLLs\oRAInterface.dll</HintPath>
+    <Reference Include="o!RAInterface">
+      <HintPath>..\DLLs\o!RAInterface.dll</HintPath>
     </Reference>
     <Reference Include="osu!BMAPI">
       <HintPath>..\DLLs\osu!BMAPI.dll</HintPath>
