--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -39,13 +39,11 @@
       <HintPath>..\DLLs\ErikEJ.SqlCe40.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="o!RAInterface">
+      <HintPath>..\DLLs\o!RAInterface.dll</HintPath>
+    </Reference>
     <Reference Include="o!RAResources">
       <HintPath>..\DLLs\o!RAResources.dll</HintPath>
-    </Reference>
-    <Reference Include="oRAInterface, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\DLLs\oRAInterface.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="osu!BMAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
