--- a/o!RAInterface/o!RAInterface.csproj
+++ b/o!RAInterface/o!RAInterface.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F4F6BFAC-4D9B-4F24-963E-418806FCA1EE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>oRAInterface</RootNamespace>
-    <AssemblyName>oRAInterface</AssemblyName>
+    <RootNamespace>o_RAInterface</RootNamespace>
+    <AssemblyName>o!RAInterface</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
