(*) Proper XML (de)serialization.
(*) Default all locale properties to oRA_ prefix (instead of info_, tab_, text_ etc).
(*)

--- a/o!RA/o!RA.csproj
+++ b/o!RA/o!RA.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>PluginSettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GlobalClasses\DBHelper.cs" />
+    <Compile Include="GlobalClasses\XMLHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalClasses\oRAFuncs.cs" />
