(*) Properly scale background image in Beatmap preview.
(*) Add Goto Start, Play/Pause, Goto End buttons to Beatmap preview (no functionality yet).
(*) Expose osu!'s directory to plugins (might deprecate ReplayDirectory and BeatmapDirectory).
(*) Add basic skin to resources and load skin in Beatmap preview.

--- a/o!RAResources/o!RAResources.csproj
+++ b/o!RAResources/o!RAResources.csproj
@@ -78,6 +78,27 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\flag_ro.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\default_hitcircleoverlay.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\default_followpoint.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\default_hitcircle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Player_End.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Player_Pause.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Player_Play.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Player_Start.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
